<resources>
    <string name="app_name">Rehapp</string>
    <string name="menuItem1">Today\'s Progress</string>
    <string name="menuItem2">Your Program</string>
    <string name="menuItem3">Your longterm progress</string>
    <string name="menuItem4">Live view your movement</string>
    <string name="bluetoothBtn">Turn on bluetooth</string>
    <string name="bluetoothStatus">Bluetooth status</string>
    <string name="logout">LOG OUT</string>
    <string name="discover">Discover</string>

    <!-- from bt project -->
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
